--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.16.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
